# agentic-rag

./: .coveragerc  .env.example  .env.monitoring  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_SETUP_COMPLETE.md  LICENSE  MONITORING_TESTING_GUIDE.md  README.md  SPRINT_7_IMPLEMENTATION_ASSESSMENT.md  SPRINT_7_TESTING_SUMMARY.md  alembic.ini  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  project-documentation.md  pyproject.toml  start-monitoring-stack.bat  test_agentic_rag.db
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 001_initial_database_schema_with_multi_tenant_support.py  002_add_indexes_and_constraints.py  003_add_row_level_security.py  004_add_document_status_and_metadata.py  004_add_utility_functions.py  005_add_password_hash_to_user.py
config/: development.env  production.env  testing.env
docker/elk-stack/: docker-compose.yml
docker/grafana/: docker-compose.yml
docs/: database-schema.md  docker-compose-setup-summary.md  docker-setup.md  sprint-1-story-1-02-completion-summary.md  sprint-2-critical-gaps-resolution.md  sprint-3-chromadb-integration-complete.md  sprint-3-completion-audit.md  sprint-3-openai-embeddings-complete.md  sprint-3-query-processing-complete.md  sprint-3-search-api-complete.md  sprint-3-vector-indexing-complete.md
ops/docker/: Dockerfile.dev  Dockerfile.docling  requirements.docling.txt
scripts/: demo_analytics_system.py  demo_correction_system.py  demo_feedback_system.py  demo_learning_system.py  demo_monitoring_system.py  demo_quality_improvement_system.py  demo_sprint5_integration.py  dev-setup.bat  docker-helper.ps1  docker-helper.sh  health-check.bat  health-check.sh  init-db.sql  migrate.py  postgres-config.conf  run_api.py  seed_data.py  setup-dev.py  test_monitoring_stack.py  test_schema.py
sprints/: README.md  dependency-matrix.md  file-structure-summary.md  project-timeline.md
sprints/sprint-1/: 1-01-development-environment-story.md  1-02-database-schema-story.md  1-03-api-framework-story.md  1-04-testing-infrastructure-story.md  README.md
sprints/sprint-2/: 2-01-file-upload-storage-story.md  2-02-granite-docling-integration-story.md  2-03-document-chunking-story.md  2-04-document-management-api-story.md  README.md
sprints/sprint-3/: 3-01-chromadb-integration-story.md  3-02-openai-embeddings-story.md  3-03-vector-indexing-story.md  3-04-basic-search-api-story.md  3-05-query-processing-story.md  README.md
sprints/sprint-4/: 4-01-contextual-chunking-story.md  4-02-document-linking-story.md  4-03-three-hop-retrieval-story.md  4-04-llm-reranking-story.md  4-05-enhanced-query-processing-story.md  README.md
sprints/sprint-5/: 5-01-agent-orchestration-story.md  5-02-answer-synthesis-story.md  5-03-redaction-privacy-story.md  5-04-pricing-analysis-completion-summary.md  5-04-pricing-analysis-story.md  5-05-advanced-query-processing-completion-summary.md  5-05-advanced-query-processing-story.md  README.md  sprint-5-completeness-audit-report.md  sprint-5-completion-summary.md
sprints/sprint-6/: 6-01-feedback-collection-completion-summary.md  6-01-feedback-collection-story.md  6-02-user-correction-completion-summary.md  6-02-user-correction-story.md  6-03-learning-algorithms-completion-summary.md  6-03-learning-algorithms-story.md  6-04-feedback-analytics-completion-summary.md  6-04-feedback-analytics-story.md  6-05-automated-quality-completion-summary.md  6-05-automated-quality-story.md  README.md
sprints/sprint-7/: 7-01-monitoring-observability-completion-summary.md  7-01-monitoring-observability-story.md  7-02-production-deployment-story.md  7-03-security-hardening-story.md  7-04-operational-procedures-story.md  7-05-backup-recovery-story.md  7-06-performance-optimization-story.md  README.md
src/agentic_rag/: __init__.py  config.py
tests/: __init__.py  base.py  conftest.py
tests/integration/: test_analytics_system.py  test_api_health.py  test_correction_system.py  test_database.py  test_feedback_system.py  test_granite_docling_integration.py  test_learning_system.py  test_monitoring_system.py  test_quality_improvement_system.py  test_security_integration.py  test_sprint5_integration.py  test_storage_integration.py  test_task2_acceptance_criteria.py  test_task3_acceptance_criteria.py  test_task3_simple_validation.py  test_task4_acceptance_criteria.py  test_task5_acceptance_criteria.py  test_upload_api.py
tests/unit/: test_basic_chunking.py  test_chunking_pipeline.py  test_config.py  test_deduplication_chunking.py  test_document_management_api.py  test_duplicate_detection.py  test_models.py  test_security.py  (+6 more)
(+202 files in other folders)
